libqt6c/src/libqprocess.hpp

typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QProcess QProcess;
typedef struct QProcessEnvironment QProcessEnvironment;
QProcess* QProcess_new();
QProcess* QProcess_new2(QObject* parent);
QMetaObject* QProcess_MetaObject(const QProcess* self);
void QProcess_Start(QProcess* self, const libqt_string program);
void QProcess_Start2(QProcess* self);
void QProcess_StartCommand(QProcess* self, const libqt_string command);
bool QProcess_StartDetached(QProcess* self);
bool QProcess_Open(QProcess* self, int mode);
libqt_string QProcess_Program(const QProcess* self);
void QProcess_SetProgram(QProcess* self, const libqt_string program);
QStringList QProcess_Arguments(const QProcess* self);
void QProcess_SetArguments(QProcess* self, const QStringList* arguments);
int QProcess_ProcessChannelMode(const QProcess* self);
void QProcess_SetProcessChannelMode(QProcess* self, int mode);
int QProcess_InputChannelMode(const QProcess* self);
void QProcess_SetInputChannelMode(QProcess* self, int mode);
int QProcess_ReadChannel(const QProcess* self);
void QProcess_SetReadChannel(QProcess* self, int channel);
void QProcess_CloseReadChannel(QProcess* self, int channel);
void QProcess_CloseWriteChannel(QProcess* self);
void QProcess_SetStandardInputFile(QProcess* self, const libqt_string fileName);
void QProcess_SetStandardOutputFile(QProcess* self, const libqt_string fileName);
void QProcess_SetStandardErrorFile(QProcess* self, const libqt_string fileName);
void QProcess_SetStandardOutputProcess(QProcess* self, QProcess* destination);
void QProcess_SetChildProcessModifier(QProcess* self, intptr_t modifier);
libqt_string QProcess_WorkingDirectory(const QProcess* self);
void QProcess_SetWorkingDirectory(QProcess* self, const libqt_string dir);
void QProcess_SetEnvironment(QProcess* self, const QStringList* environment);
QStringList QProcess_Environment(const QProcess* self);
void QProcess_SetProcessEnvironment(QProcess* self, const QProcessEnvironment* environment);
QProcessEnvironment* QProcess_ProcessEnvironment(const QProcess* self);
int QProcess_Error(const QProcess* self);
int QProcess_State(const QProcess* self);
long long QProcess_ProcessId(const QProcess* self);
bool QProcess_WaitForStarted(QProcess* self);
bool QProcess_WaitForReadyRead(QProcess* self, int msecs);
bool QProcess_WaitForBytesWritten(QProcess* self, int msecs);
bool QProcess_WaitForFinished(QProcess* self);
libqt_string QProcess_ReadAllStandardOutput(QProcess* self);
libqt_string QProcess_ReadAllStandardError(QProcess* self);
int QProcess_ExitCode(const QProcess* self);
int QProcess_ExitStatus(const QProcess* self);
long long QProcess_BytesToWrite(const QProcess* self);
bool QProcess_IsSequential(const QProcess* self);
void QProcess_Close(QProcess* self);
int QProcess_Execute(const libqt_string program);
bool QProcess_StartDetached2(const libqt_string program);
QStringList QProcess_SystemEnvironment();
libqt_string QProcess_NullDevice();
void QProcess_Terminate(QProcess* self);
void QProcess_Kill(QProcess* self);
void QProcess_Finished(QProcess* self, int exitCode);
void QProcess_ErrorOccurred(QProcess* self, int error);
long long QProcess_ReadData(QProcess* self, char* data, long long maxlen);
long long QProcess_WriteData(QProcess* self, const char* data, long long lenVal);
void QProcess_Start22(QProcess* self, const libqt_string program, const QStringList* arguments);
void QProcess_Start3(QProcess* self, const libqt_string program, const QStringList* arguments, int mode);
void QProcess_Start1(QProcess* self, int mode);
void QProcess_StartCommand2(QProcess* self, const libqt_string command, int mode);
bool QProcess_StartDetached1(QProcess* self, long long* pid);
void QProcess_SetStandardOutputFile2(QProcess* self, const libqt_string fileName, int mode);
void QProcess_SetStandardErrorFile2(QProcess* self, const libqt_string fileName, int mode);
bool QProcess_WaitForStarted1(QProcess* self, int msecs);
bool QProcess_WaitForFinished1(QProcess* self, int msecs);
int QProcess_Execute2(const libqt_string program, const QStringList* arguments);
bool QProcess_StartDetached22(const libqt_string program, const QStringList* arguments);
bool QProcess_StartDetached3(const libqt_string program, const QStringList* arguments, const libqt_string workingDirectory);
bool QProcess_StartDetached4(const libqt_string program, const QStringList* arguments, const libqt_string workingDirectory, long long* pid);
void QProcess_Finished2(QProcess* self, int exitCode, int exitStatus);
void QProcess_SetProcessState(QProcess* self, int state);
void QProcess_Delete(QProcess* self);