QtBeef/src/Qt/qprocess.bf

extension CQt
{
	[LinkName("QProcess_new")]
	public static extern QProcess_Ptr QProcess_new();
	[LinkName("QProcess_new2")]
	public static extern QProcess_Ptr QProcess_new2(void** parent);
	[LinkName("QProcess_Delete")]
	public static extern void QProcess_Delete(QProcess_Ptr self);
	[LinkName("QProcess_MetaObject")]
	public static extern void** QProcess_MetaObject(void* self);
	[LinkName("QProcess_Qt_Metacast")]
	public static extern void* QProcess_Qt_Metacast(void* self, c_char* param1);
	[LinkName("QProcess_Qt_Metacall")]
	public static extern c_int QProcess_Qt_Metacall(void* self, QMetaObject_Call param1, c_int param2, void** param3);
	[LinkName("QProcess_Tr")]
	public static extern libqt_string QProcess_Tr(c_char* s);
	[LinkName("QProcess_Start")]
	public static extern void QProcess_Start(void* self, libqt_string program);
	[LinkName("QProcess_Start2")]
	public static extern void QProcess_Start2(void* self);
	[LinkName("QProcess_StartCommand")]
	public static extern void QProcess_StartCommand(void* self, libqt_string command);
	[LinkName("QProcess_StartDetached")]
	public static extern bool QProcess_StartDetached(void* self);
	[LinkName("QProcess_Open")]
	public static extern bool QProcess_Open(void* self, void* mode);
	[LinkName("QProcess_Program")]
	public static extern libqt_string QProcess_Program(void* self);
	[LinkName("QProcess_SetProgram")]
	public static extern void QProcess_SetProgram(void* self, libqt_string program);
	[LinkName("QProcess_Arguments")]
	public static extern void* QProcess_Arguments(void* self);
	[LinkName("QProcess_SetArguments")]
	public static extern void QProcess_SetArguments(void* self, void** arguments);
	[LinkName("QProcess_ProcessChannelMode")]
	public static extern QProcess_ProcessChannelMode QProcess_ProcessChannelMode(void* self);
	[LinkName("QProcess_SetProcessChannelMode")]
	public static extern void QProcess_SetProcessChannelMode(void* self, QProcess_ProcessChannelMode mode);
	[LinkName("QProcess_InputChannelMode")]
	public static extern QProcess_InputChannelMode QProcess_InputChannelMode(void* self);
	[LinkName("QProcess_SetInputChannelMode")]
	public static extern void QProcess_SetInputChannelMode(void* self, QProcess_InputChannelMode mode);
	[LinkName("QProcess_ReadChannel")]
	public static extern QProcess_ProcessChannel QProcess_ReadChannel(void* self);
	[LinkName("QProcess_SetReadChannel")]
	public static extern void QProcess_SetReadChannel(void* self, QProcess_ProcessChannel channel);
	[LinkName("QProcess_CloseReadChannel")]
	public static extern void QProcess_CloseReadChannel(void* self, QProcess_ProcessChannel channel);
	[LinkName("QProcess_CloseWriteChannel")]
	public static extern void QProcess_CloseWriteChannel(void* self);
	[LinkName("QProcess_SetStandardInputFile")]
	public static extern void QProcess_SetStandardInputFile(void* self, libqt_string fileName);
	[LinkName("QProcess_SetStandardOutputFile")]
	public static extern void QProcess_SetStandardOutputFile(void* self, libqt_string fileName);
	[LinkName("QProcess_SetStandardErrorFile")]
	public static extern void QProcess_SetStandardErrorFile(void* self, libqt_string fileName);
	[LinkName("QProcess_SetStandardOutputProcess")]
	public static extern void QProcess_SetStandardOutputProcess(void* self, void** destination);
	[LinkName("QProcess_SetChildProcessModifier")]
	public static extern void QProcess_SetChildProcessModifier(void* self, void** modifier);
	[LinkName("QProcess_WorkingDirectory")]
	public static extern libqt_string QProcess_WorkingDirectory(void* self);
	[LinkName("QProcess_SetWorkingDirectory")]
	public static extern void QProcess_SetWorkingDirectory(void* self, libqt_string dir);
	[LinkName("QProcess_SetEnvironment")]
	public static extern void QProcess_SetEnvironment(void* self, void** environment);
	[LinkName("QProcess_Environment")]
	public static extern void* QProcess_Environment(void* self);
	[LinkName("QProcess_SetProcessEnvironment")]
	public static extern void QProcess_SetProcessEnvironment(void* self, void** environment);
	[LinkName("QProcess_ProcessEnvironment")]
	public static extern void* QProcess_ProcessEnvironment(void* self);
	[LinkName("QProcess_Error")]
	public static extern QProcess_ProcessError QProcess_Error(void* self);
	[LinkName("QProcess_State")]
	public static extern QProcess_ProcessState QProcess_State(void* self);
	[LinkName("QProcess_ProcessId")]
	public static extern c_longlong QProcess_ProcessId(void* self);
	[LinkName("QProcess_WaitForStarted")]
	public static extern bool QProcess_WaitForStarted(void* self);
	[LinkName("QProcess_WaitForReadyRead")]
	public static extern bool QProcess_WaitForReadyRead(void* self, c_int msecs);
	[LinkName("QProcess_WaitForBytesWritten")]
	public static extern bool QProcess_WaitForBytesWritten(void* self, c_int msecs);
	[LinkName("QProcess_WaitForFinished")]
	public static extern bool QProcess_WaitForFinished(void* self);
	[LinkName("QProcess_ReadAllStandardOutput")]
	public static extern void* QProcess_ReadAllStandardOutput(void* self);
	[LinkName("QProcess_ReadAllStandardError")]
	public static extern void* QProcess_ReadAllStandardError(void* self);
	[LinkName("QProcess_ExitCode")]
	public static extern c_int QProcess_ExitCode(void* self);
	[LinkName("QProcess_ExitStatus")]
	public static extern QProcess_ExitStatus QProcess_ExitStatus(void* self);
	[LinkName("QProcess_BytesToWrite")]
	public static extern c_longlong QProcess_BytesToWrite(void* self);
	[LinkName("QProcess_IsSequential")]
	public static extern bool QProcess_IsSequential(void* self);
	[LinkName("QProcess_Close")]
	public static extern void QProcess_Close(void* self);
	[LinkName("QProcess_Execute")]
	public static extern c_int QProcess_Execute(libqt_string program);
	[LinkName("QProcess_StartDetached2")]
	public static extern bool QProcess_StartDetached2(libqt_string program);
	[LinkName("QProcess_SystemEnvironment")]
	public static extern void* QProcess_SystemEnvironment();
	[LinkName("QProcess_NullDevice")]
	public static extern libqt_string QProcess_NullDevice();
	[LinkName("QProcess_Terminate")]
	public static extern void QProcess_Terminate(void* self);
	[LinkName("QProcess_Kill")]
	public static extern void QProcess_Kill(void* self);
	[LinkName("QProcess_Finished")]
	public static extern void QProcess_Finished(void* self, c_int exitCode);
	[LinkName("QProcess_ErrorOccurred")]
	public static extern void QProcess_ErrorOccurred(void* self, QProcess_ProcessError error);
	[LinkName("QProcess_SetProcessState")]
	public static extern void QProcess_SetProcessState(void* self, QProcess_ProcessState state);
	[LinkName("QProcess_ReadData")]
	public static extern c_longlong QProcess_ReadData(void* self, c_char* data, c_longlong maxlen);
	[LinkName("QProcess_WriteData")]
	public static extern c_longlong QProcess_WriteData(void* self, c_char* data, c_longlong lenVal);
	[LinkName("QProcess_Tr2")]
	public static extern libqt_string QProcess_Tr2(c_char* s, c_char* c);
	[LinkName("QProcess_Tr3")]
	public static extern libqt_string QProcess_Tr3(c_char* s, c_char* c, c_int n);
	[LinkName("QProcess_Start22")]
	public static extern void QProcess_Start22(void* self, libqt_string program, void** arguments);
	[LinkName("QProcess_Start3")]
	public static extern void QProcess_Start3(void* self, libqt_string program, void** arguments, void* mode);
	[LinkName("QProcess_Start1")]
	public static extern void QProcess_Start1(void* self, void* mode);
	[LinkName("QProcess_StartCommand2")]
	public static extern void QProcess_StartCommand2(void* self, libqt_string command, void* mode);
	[LinkName("QProcess_StartDetached1")]
	public static extern bool QProcess_StartDetached1(void* self, c_longlong* pid);
	[LinkName("QProcess_SetStandardOutputFile2")]
	public static extern void QProcess_SetStandardOutputFile2(void* self, libqt_string fileName, void* mode);
	[LinkName("QProcess_SetStandardErrorFile2")]
	public static extern void QProcess_SetStandardErrorFile2(void* self, libqt_string fileName, void* mode);
	[LinkName("QProcess_WaitForStarted1")]
	public static extern bool QProcess_WaitForStarted1(void* self, c_int msecs);
	[LinkName("QProcess_WaitForFinished1")]
	public static extern bool QProcess_WaitForFinished1(void* self, c_int msecs);
	[LinkName("QProcess_Execute2")]
	public static extern c_int QProcess_Execute2(libqt_string program, void** arguments);
	[LinkName("QProcess_StartDetached22")]
	public static extern bool QProcess_StartDetached22(libqt_string program, void** arguments);
	[LinkName("QProcess_StartDetached3")]
	public static extern bool QProcess_StartDetached3(libqt_string program, void** arguments, libqt_string workingDirectory);
	[LinkName("QProcess_StartDetached4")]
	public static extern bool QProcess_StartDetached4(libqt_string program, void** arguments, libqt_string workingDirectory, c_longlong* pid);
	[LinkName("QProcess_Finished2")]
	public static extern void QProcess_Finished2(void* self, c_int exitCode, QProcess_ExitStatus exitStatus);
}
